_assets/css/pages/_projects.scss
// PROJECTS customization

.projects-banner {
    .usa-hero {
      background-image: url(asset_path("stock/USDC_Agency_Banner.png"));
       //@include u-bg("primary-dark");
       color: #ffffff;
        background-position: center center;
        position: relative;
        min-height: 600px;
        margin-bottom: 15%;
        max-width: 100%;

        // screen size adjustments
        @include at-media-max("desktop-lg") {
           // background-position: 30% top;
           margin-bottom: 15%;
        }

        @include at-media-max("desktop") {
          // background-image: none;
          // background-color: #1a2c85;
            .grid-container {
                @include u-padding-x(0);
            }
        }

         @include at-media-max("mobile-lg") {
            @include u-padding-y(0);
            //background-position: 40% top;
            background-image: none;
            background-color: #1a2c85;
            min-height: unset;
            margin-bottom: 27%;
         }

        // callout container
        .usa-hero__callout {
            //@include grid-col(6);
           // @include grid-offset(1);
           //@include u-margin-top(15);
            text-align: center;

            // screen size adjustments
            @include at-media-max("desktop") {
                @include grid-col(auto);
                @include grid-offset(none);
                @include u-margin-top(0);
                //background-color: rgba(255, 255, 255, 0.6);
                position: relative;
                bottom: 0;
            }

            @include at-media-max("mobile-lg") {
                position: relative;
                min-height: 430px;

                .content {
                    @include u-padding-x(2);
                    @include u-padding-bottom(3);
                    @include u-margin-bottom(2);
                    position: relative;
                    left: 0;
                    bottom: 0;
                }
            }

            // subtext
            h2 {
                color: #ffffff;
                @include u-margin-top(3);
                @include u-margin-bottom(0);
            }
        }
    }
}


//Second Section
.project-section-two{
  max-width: 90%;
  position: relative;
  min-height: 250px;
  //left: 50%;
  margin: auto;
  //max-height: 300px;
}



//Youtube Video Responsiveness
.iframe-container{
  display: flex; //for example 2
  justify-content: center;  //example2
  position: relative; 
  padding-bottom: 28.25%; 
  padding-top: 30px; 
  height: 0; 
  width: 60%;
  margin: auto;
  @include u-margin-top(10);
  //overflow: hidden; 
  //position: relative;
  //width: 50%;
 // height: 100%;
  //padding-bottom: 40%;
  //height: 0;
  //border-radius: 20px;
 // overflow: hidden;
  //z-index: 1;
  @include at-media-max("mobile-lg") {
    width: 90%;
    padding-top: 22px;
    padding-bottom: 43.36%;
    margin: auto;
  }
}

.iframe-container iframe{
  //@include u-margin-top(neg-15);
  position: absolute;
  top: 0; 
  left: 0; 
  width: 100%;
  height: 100%;
  margin: 18% 0 10% 0;
  //object-fit: fill;
 // z-index: 2;

}
.projects-whatagenciesdo-image {
    background-image: url(asset_path("stock/USDC_Projects_HostAgency_Placeholder.webp"));
    background-position: 50% top;
}
.whatagenciesdo{
  border-radius: 20px;
  overflow: hidden;
  z-index: 1;
}
.host-paragraph{
  @include u-bg('gray-5');
  text-align: center;
  line-height: 1.5;
  //position: relative;
  top: 20%;
}
.projects-details{
  @include u-bg('gray-5');
}
//This section may not be needed and will be deleted before Live deployment
// .list-agencies {
//     //min-height: 100vh;
//     display: flex;
//     flex-wrap: wrap;
//     flex-direction: row;
//     justify-content: left;
//   }
  .project-items{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }

  .project-items > div {
    flex: 50%;
  }
  
  .usa-button--accent-cool{
    @include u-bg('primary-vivid');
    color: white;
  }
  .agency-card--specialty {
    //font-family: $theme-font-type-serif;
    color: #ffffff;
    @include u-margin-bottom(0.5);
    ul {
      @include u-padding(0);
      list-style: none;
      border-radius: 10px;
      li {
        @include u-margin-bottom(2.0);
        span {
          @include u-font('sans', 1);
          @include u-padding(1);
          @include u-bg('red-cool-10v');
          border-radius: 5px;
          &.equity {
            background-color: #58B4FF;
            color: #000000;
          }
          &.health {
            background-color: #FACE00;
            color: #000000; 
          }
          &.cybersecurity {
            background-color: #000000;
          }
          &.public-exp {
            background-color: #9D1831;
          }
          &.immigration {
            background-color: #1B2B85;
          }
          &.capacity {
            background-color: #C7C7C7;
            color: #000000;
          }
        
        }
      }
    }
  }

  $project-item-border-radius: 5px;

.project-item__outer {
  margin-bottom: 2rem;
  margin-right: 2rem;
  max-width: 450px;
  width: 100%;
  //justify-content: center;
  //display: none;
}

.project-item__outer.hide {
  display: none;
}

.hide{
  display: none;
}

.show{
  display: block;
}
.project-item {
  border-radius: $project-item-border-radius;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.18);
  flex: 50%;
  @include at-media('tablet') {
    height: 100%;
  }
}

.project-item__header {
  justify-content: space-between;
  align-items:flex-end;
  //padding: 1rem;
  box-sizing: border-box;
}

.project-item__agency {
  @include u-font('sans', 'lg');
  color: black;
  font-style: normal;
}

.project-item__type {
  @include u-bg('primary-vivid');
  @include u-text('white');
  @include u-font('sans', '3xs');
  line-height: 13px;
  height: 24px;
  border-radius: 12px;
  padding-top: 5px;
  padding-left: 15px;
  padding-right: 15px;
  flex-shrink: 0;
}

.project-item__content {
  padding: 2rem 1rem;
  display: flex;
  //align-items: center;
  flex-direction: column;
  @include at-media('tablet') {
    flex-direction: row;
  }
}

.project-item__image {
  height: 165px;
  width: 100%;
  background-size: cover;
  background-position: center center;
}

.project-item__logo {
  height: auto;
  width: 60%;
  margin-bottom: 1rem;
  @include at-media('tablet') {
    margin-right: 1.4rem;
  }
}

.project-item__title {
  @include u-font('sans', 'sm');
  @include u-text('normal');
  //line-height: 1.45;
  font-size: 14px;
  margin: 0;
}

.project-item--case-study {
//   .project-item__header {
//     @include light-bg;
//   }

  .project-item__content {
    display: block;
    padding: 1rem;
  }

  .project-item__type {
    @include u-bg('primary-darker');
  }
}

.impact-list{
  font-weight: bold;
}

.project-skill-impact{
  color: #0076D6;
  font-weight: bold;
}

//Impact Area Description Section
.impact-descriptions{
  @include u-bg('gray-5');
}

